--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<h1> Hello world </h1>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title> AUEY | PONGKARUINA </title>
+		<link rel="shortcut icon" src="images/quality.png" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
+
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<h1>PONGKARUINA PONGTHONGNUN</h1>
+					<p>58102010813</p>
+				</header>
+				<footer>
+					<a href="#banner" class="button style2 scrolly-middle">WELLCOME</a>
+				</footer>
+			</section>
+
+		<!-- Banner -->
+			<section id="banner">
+				<header>
+					<h2>ABOUT ME</h2>
+				</header>
+				<p>My nickname is Auey. My birthday is 7 November 1996. I'm 20 years old. My Blood’s Group is A.</p>
+				<footer>
+					<a href="#first" class="button style2 scrolly">ME.</a>
+				</footer>
+			</section>
+
+		<!-- Feature 1 -->
+			<article id="first" class="container box style1 right">
+				<a href="#" class="image fit"><img src="images/auey.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2>I'M A JUNIOR IN COMPUTER SCIENCE AT SRINAKHARINWIROT UNIVERSITY.</h2>
+					</header>
+				</div>
+			</article>
+
+		<!-- Feature 2 -->
+			<article class="container box style1 left">
+				<a href="#" class="image fit"><img src="images/oor.jpg" alt="" /></a>
+				<div class="inner">
+					<header>
+						<h2><center>MY FAVORITE BAND</center><br />
+						<center>" ONE OK ROCK "</center><br />
+						<center>I LOVE MUSIC</center></h2>
+					</header>
+				</div>
+			</article>
+
+		<section id="footer">
+			<ul class="icons">
+				<li><a href="https://www.facebook.com/pongkaruina.pongthongnun" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/pongkaruina/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/auey" class="icon fa-github"><span class="label">Github</span></a></li>
+			</ul>
+			<div class="copyright">
+				<ul class="menu">
+					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
